--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -1,2 +1,22 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+
+#LABEL io.openshift.expose-services="8080:http"
+LABEL io.k8s.description="A basic apache HTTPD child image uses ONBUILD" \
+      io.k8s.display-name="APACHE http server" \
+      io.openshift.expose-services="8080:http" \
+      io.openshift.tags="apache, httpd"
+
+
+EXPOSE 8080
+
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf \
+    sed -i "s/#ServerName www.example.com:8080/ServerName 0.0.0.0:8080/g" \
+    /etc/httpd/conf/httpd.conf
+
+RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
+    chmod -R g=u /var/log/httpd /var/run/httpd 
+
+USER 1001
+
+
