--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -10,9 +10,8 @@ LABEL io.k8s.description="A basic apache HTTPD child image uses ONBUILD" \
 
 EXPOSE 8080
 
-RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf \
-    sed -i "s/#ServerName www.example.com:8080/ServerName 0.0.0.0:8080/g" \
-    /etc/httpd/conf/httpd.conf
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf 
+RUN sed -i "s/#ServerName www.example.com:8080/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf
 
 RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
     chmod -R g=u /var/log/httpd /var/run/httpd 
